# spyro_ad

./: README.md  exact_vel.pvd  exact_vel_0.pvtu  pyproject.toml  u_0.pvtu  vp.pvd  vp_0.vtu  vp_guess.pvd  vp_scipy_mm_ad.pvd
demos/: forward.py  fwi.py  rec.py  settings.py  test.py
fwi/: control.pvd  control_0.vtu  control_1.vtu  grad.pvd  grad_0.vtu
meshes/: square.msh
spyro_ad/: __init__.py  acoustic_solver.py
spyro_ad/domains/: __init__.py
spyro_ad/io/: __init__.py  io.py
spyro_ad/plot/: __init__.py  plot.py
spyro_ad/solvers/: __init__.py  acoustic_solver.py
spyro_ad/utils/: __init__.py  utils.py
