[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["spyro_ad"]  
include = ["spyro_ad*"] 
namespaces = false  

[project]
name = "spyro_ad"
version = "0.0.1"
authors = [
  {email = "daia.dolci@gmail.com"},
  {name = "Daiane I. Dolci"}
]
description = "Full Waveform Inversion wolver using an automated adjoint-based gradient."
readme = "README.md"
dependencies = ["numpy"]
keywords = ["Full Waveform Inversion", "Adjoint", "Automatic Diferentiation", "Finite Elements Method", "Firedrake"]
license = {text = "GPL-3.0"}
# requires-python = ">=3.7"
#[project.urls]
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
# repository = "https://github.com/firedrakeproject/checkpoint_schedules"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"